--- a/thera_whispers_above_cauldera_fin_axd-xxxxx.html
+++ b/thera_whispers_above_cauldera_fin_axd-xxxxx.html
@@ -20724,8 +20724,8 @@
     <audio id="audio-player" controls></audio>
 
     <script>
-    const AUDIO_FOLDER = "https://<account-id>.r2.cloudflarestorage.com/thera-whispers-samples/Sample_C/"; 
-    const THUMBNAIL_FOLDER = "https://<account-id>.r2.cloudflarestorage.com/thera-whispers-samples/waveform_thumbnails/";
+    const AUDIO_FOLDER = "https://Sample_C/"; 
+    const THUMBNAIL_FOLDER = "https://waveform_thumbnails/";
     const nodes = document.querySelectorAll('.node');
     const labels = document.querySelectorAll('.node-label');
     const infoBox = document.getElementById('info-box');
