--- a/index.html
+++ b/index.html
@@ -20727,8 +20727,8 @@
 
     
 <script>
-const AUDIO_FOLDER = "Sample_C/";
-const THUMBNAIL_FOLDER = "waveform_thumbnails/";
+const AUDIO_FOLDER = "Thea/Sample_C/";
+const THUMBNAIL_FOLDER = "Thea/waveform_thumbnails/";
 
 const nodes = document.querySelectorAll('.node');
 const labels = document.querySelectorAll('.node-label');
